tests/fixtures/guardrails/invalid/template-direct-admin-access/app/routes/products.ts
export async function action(name) {
  return import(`~/platform/shopify/${name}`);
}
